--- a/Invessence/modules/web/src/main/webapp/pages/common/notification.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/common/notification.xhtml
@@ -54,7 +54,7 @@
 
                                     <p:column styleClass="Fs14 TexAlLeft"
                                               headerText="Message">
-                                        <h:outputText value="#{msg.message}">
+                                        <h:outputText value="#{msg.message}" escape="false">
                                         </h:outputText>
                                     </p:column>
 
