--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/cEdit.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/cEdit.xhtml
@@ -9,7 +9,7 @@
 		<div class="Container100">
 			<div class="ContainerIndent Responsive100 tab_main">
 
-				<p:steps id="progressbar" styleClass="portfolioCreationStepsPanel"
+				<p:steps id="progressbar" styleClass="portfolioCreationStepsPanel tabColorOnluCustom"
 					activeIndex="#{tcmpb.pagemanager.page}">
 					<p:menuitem value="Start" />
 					<p:menuitem value="Objective" />
