--- a/Invessence/modules/web/src/main/webapp/pages/custody/td/tdconfirmation.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/td/tdconfirmation.xhtml
@@ -38,7 +38,7 @@
 						<div class="ContainerIndent">
 							<h4 class="FsRes13">
                                 (Note : If it is a joint account application, then once signature process is completed by the primary account holder
-                                then, second reminder will be sent to joint account holder's email address for their signature)”
+                                then, second reminder will be sent to joint account holder's email address for their signature)
                             </h4>
 						</div>
 						<div class="EmptyBox10"></div>
