--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
@@ -127,7 +127,7 @@
                                                 <div class="s_dashboard">
 
                                                     <div class="Container40 s_dashboardIcon">
-                                                        <p:commandButton id="editPortfolioButton" disabled="#{!investment.editable}"
+                                                        <p:commandButton id="editPortfolioButton"
                                                                          styleClass="Fs14 OrangeButton"
                                                                          process="@this" immediate="true"
                                                                          icon="fa fa-pie-chart Fs14 white"
