Checked in 12/14/2016 (dash.xhtml)- Prakash Lal

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/dash.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/dash.xhtml
@@ -101,7 +101,7 @@
                                                 <tbody>
                                                 <tr>
                                                     <td class="CustomWidthColumn_d_2_newDash"><p:commandButton id="uidHelp"
-                                                                                            styleClass="info_dashboard  Fright"
+                                                                                            styleClass="InfoNewDash Fright"
                                                                                             icon="fa fa-info-circle Fs14" value="Info" process="@none"/>
 
                                                         <p:overlayPanel id="uidHP" for="uidHelp" hideEffect="fade"
