--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
@@ -108,7 +108,7 @@
 
                                                         <p:overlayPanel id="uidHP" for="uidHelp" hideEffect="fade"
                                                                         dynamic="false" showCloseIcon="true"
-                                                                        style="width:200px; margin-left: 5px">
+                                                                        style="width:auto; margin-left: 5px">
                                                             <table class="dashExtraInfoTable">
                                                                 <tbody>
                                                                 <tr>
