Checked in 12/15/2016 (index.xhtml & tcm.css) - Prakash Lal

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
@@ -72,8 +72,8 @@
                                                         <div class="ContentTitleDash">Strategy</div>
                                                         <div class="ContentForTitleDash">#{investment.portfolioName}</div></td>
                                                     <td class="CustomWidthColumn_d">
-                                                        <div class="ContentTitleDash">Invested Amount</div>
-                                                        <div class="ContentForTitleDash"><h:outputText
+                                                        <div class="ContentTitleDash textRAlign">Invested Amount</div>
+                                                        <div class="ContentForTitleDash textRAlign"><h:outputText
                                                                 value="#{investment.actualInvested}"
                                                                 rendered="#{investment.managed}">
                                                             <f:convertNumber currencySymbol="$" type="currency" />
