--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
@@ -74,7 +74,7 @@
                                                     <td class="CustomWidthColumn_d">
                                                         <div class="ContentTitleDash textRAlign">Invested Amount</div>
                                                         <div class="ContentForTitleDash textRAlign"><h:outputText
-                                                                value="#{investment.actualInvested}"
+                                                                value="#{investment.actualInvestment}"
                                                                 rendered="#{investment.managed}">
                                                             <f:convertNumber currencySymbol="$" type="currency" />
                                                         </h:outputText> <h:outputText value="#{investment.initialInvestment}"
