Defect fixes on 2016/12/16

--- a/Invessence/modules/web/src/main/webapp/pages/custody/td/cedit.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/td/cedit.xhtml
@@ -113,7 +113,7 @@
                                 <div class="Container100 saveNopenBtn" style="">
                                     <p:commandButton value="Cancel"
                                                      update=":ctoForm:tdaccordian, :ctoForm:errorMsg" process="@form"
-                                                     styleClass="Fleft" >
+                                                     styleClass="Fleft" actionListener="#{uiLayout.defaultHome}">
 
                                     </p:commandButton>
 
